tests/snapshots/file@field@get_on_num.lox.snap
---
source: tests/common/mod.rs
description: "123.foo; // expect runtime error: Only instances have properties.\n"
input_file: crafting_interpreters_test_files/field/get_on_num.lox
---
OUT: 

===
ERR: 
  × only instances have properties
   ╭────
 1 │ 123.foo; // expect runtime error: Only instances have properties.
   ·     ─┬─
   ·      ╰── here
   ╰────
