tests/snapshots/file@field@set_on_function.lox.snap
---
source: tests/common/mod.rs
description: "fun foo() {}\n\nfoo.bar = \"value\"; // expect runtime error: Only instances have fields.\n"
input_file: crafting_interpreters_test_files/field/set_on_function.lox
---
OUT: 

===
ERR: 
  × only instances have properties
   ╭─[3:5]
 2 │ 
 3 │ foo.bar = "value"; // expect runtime error: Only instances have fields.
   ·     ─┬─
   ·      ╰── here
   ╰────
