tests/snapshots/file@field@set_on_nil.lox.snap
---
source: tests/common/mod.rs
description: "nil.foo = \"value\"; // expect runtime error: Only instances have fields.\n"
input_file: crafting_interpreters_test_files/field/set_on_nil.lox
---
OUT: 

===
ERR: 
  × only instances have properties
   ╭────
 1 │ nil.foo = "value"; // expect runtime error: Only instances have fields.
   ·     ─┬─
   ·      ╰── here
   ╰────
