tests/snapshots/file@for@class_in_body.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'class': Expect expression.\nfor (;;) class Foo {}\n"
input_file: crafting_interpreters_test_files/for/class_in_body.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false, this, super', found 'class'
   ╭─[2:10]
 1 │ // [line 2] Error at 'class': Expect expression.
 2 │ for (;;) class Foo {}
   ·          ──┬──
   ·            ╰── here
   ╰────
